# smabo-brain-ros

./: .gitignore  README.md  build.sh  docker-compose.yml  run.sh
docker/: Dockerfile  entrypoint.sh
smabo_brain_ros/: package.xml  setup.cfg  setup.py
smabo_brain_ros/launch/: odom.launch.py  relays.launch.py  speech.launch.py  vision.launch.py
smabo_brain_ros/smabo_brain_ros/: drive_policy_node.py  gaze_policy_node.py  image_processor_node.py  neck_policy_node.py  odom_node.py  servo_trajectory_bridge.py  speech_recognizer_node.py  vision_common.py  webrtc_camera_node.py
smabo_bringup/: CMakeLists.txt  package.xml
smabo_bringup/launch/: bringup.launch.py  rosbridge.launch.py
smabo_description/: CMakeLists.txt  package.xml
smabo_description/launch/: description.launch.py
smabo_description/rviz/: smabo.rviz
smabo_description/urdf/: smabo.urdf.xacro
smabo_interfaces/: CMakeLists.txt  package.xml
smabo_interfaces/msg/: WheelVel.msg
smabo_moveit_config/: CMakeLists.txt  package.xml
smabo_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  smabo.srdf
smabo_moveit_config/launch/: move_group.launch.py
smabo_navigation/: CMakeLists.txt  package.xml
smabo_navigation/config/: nav2_params.yaml  slam_toolbox.yaml
smabo_navigation/launch/: nav2.launch.py  slam.launch.py
smabo_navigation/maps/: empty_map.yaml
